# field-research-telegram-bot

./: .env.example  .gitignore  README.md  pyproject.toml
prompts/: salutips_prompt.txt
scripts/: botctl.sh  google_sheet_webhook.gs  run_telegram_bot.sh
src/research_bot/: __init__.py  ai.py  bot.py  config.py  db.py  env.py  main.py  models.py  storage.py  telegram_api.py
